# article-extractor

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  Readme.md  expected.html  flake.nix
article_scraper/: Cargo.toml  LICENSE  expected.html
article_scraper/resources/tests/ftr/golem/: expected.html  source.html
article_scraper/resources/tests/ftr/hardwareluxx/: expected.html
article_scraper/resources/tests/ftr/heise-1/: expected.html
article_scraper/resources/tests/ftr/phoronix/: expected.html  source.html
article_scraper/resources/tests/ftr/spiegel-1/: expected.html
article_scraper/resources/tests/ftr/youtube/: expected.html
article_scraper/resources/tests/images/planet_gnome/: source.html
article_scraper/resources/tests/planetGnome/: fedora31.html
article_scraper/resources/tests/readability/001/: expected.html
article_scraper/resources/tests/readability/002/: expected.html
article_scraper/resources/tests/readability/003/: expected.html
article_scraper/resources/tests/readability/aclu/: expected.html
article_scraper/resources/tests/readability/aktualne/: expected.html
article_scraper/resources/tests/readability/ars-1/: expected.html
article_scraper/resources/tests/readability/basic-tags-cleaning/: expected.html
article_scraper/resources/tests/readability/bbc-1/: expected.html
article_scraper/resources/tests/readability/blogger/: expected.html
article_scraper/resources/tests/readability/breitbart/: expected.html
article_scraper/resources/tests/readability/bug-1255978/: expected.html
article_scraper/resources/tests/readability/buzzfeed-1/: source.html
article_scraper/resources/tests/readability/citylab-1/: expected.html
article_scraper/resources/tests/readability/clean-links/: expected.html
article_scraper/resources/tests/readability/cnet/: expected.html
article_scraper/resources/tests/readability/cnet-svg-classes/: expected.html
article_scraper/resources/tests/readability/cnn/: expected.html
article_scraper/resources/tests/readability/comment-inside-script-parsing/: expected.html
article_scraper/resources/tests/readability/daringfireball-1/: expected.html
article_scraper/resources/tests/readability/dev418/: expected.html
article_scraper/resources/tests/readability/dropbox-blog/: expected.html
article_scraper/resources/tests/readability/ebb-org/: expected.html
article_scraper/resources/tests/readability/ehow-1/: expected.html
article_scraper/resources/tests/readability/ehow-2/: expected.html
article_scraper/resources/tests/readability/embedded-videos/: expected.html
article_scraper/resources/tests/readability/engadget/: expected.html
article_scraper/resources/tests/readability/firefox-nightly-blog/: expected.html
article_scraper/resources/tests/readability/gmw/: expected.html
article_scraper/resources/tests/readability/google-sre-book-1/: expected.html
article_scraper/resources/tests/readability/guardian-1/: expected.html
article_scraper/resources/tests/readability/heise/: expected.html
article_scraper/resources/tests/readability/herald-sun-1/: expected.html
article_scraper/resources/tests/readability/hidden-nodes/: expected.html
article_scraper/resources/tests/readability/hukumusume/: expected.html
article_scraper/resources/tests/readability/iab-1/: expected.html
article_scraper/resources/tests/readability/ietf-1/: expected.html
article_scraper/resources/tests/readability/js-link-replacement/: expected.html
article_scraper/resources/tests/readability/keep-images/: expected.html
article_scraper/resources/tests/readability/keep-tabular-data/: expected.html
article_scraper/resources/tests/readability/la-nacion/: expected.html
article_scraper/resources/tests/readability/lazy-image-1/: expected.html
article_scraper/resources/tests/readability/lazy-image-2/: expected.html
article_scraper/resources/tests/readability/lemonde-1/: expected.html
article_scraper/resources/tests/readability/liberation-1/: expected.html
article_scraper/src/: article.rs  clean.rs  constants.rs  error.rs  image_object.rs  lib.rs  util.rs  video_object.rs
article_scraper/src/full_text_parser/: mod.rs  tests.rs
article_scraper/src/full_text_parser/config/: config_collection.rs  config_entry.rs
article_scraper/src/full_text_parser/readability/: mod.rs  tests.rs
article_scraper/src/images/: error.rs  image_data.rs  mod.rs  pair.rs  progress.rs  request.rs
article_scraper_cli/: Cargo.toml  result.html
article_scraper_cli/src/: args.rs  main.rs
benches/: slow.rs
(+206 files in other folders)
