[package]
name = "article_scraper"
version = "1.1.8-alpha.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Scrap article contents from the web. Powered by fivefilters full text feed configurations."
repository = "https://gitlab.com/news-flash/article_scraper"

[dependencies]
failure = "0.1"
libxml = "0.3"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.21", features = ["macros", "fs", "io-util"] }
url = "2.2"
regex = "1.4"
encoding_rs = "0.8"
chrono = "0.4"
base64 = "0.13"
image = "0.24"
log = "0.4"
parking_lot = "0.12"
