[package]
name = "article_scraper"
version = "2.1.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Scrap article contents from the web. Powered by fivefilters full text feed configurations & mozilla readability."
readme = "README.md"
keywords = ["article", "scrape", "full-text", "readability"]
exclude = ["resources/tests"]

[dependencies]
thiserror = "1.0"
libxml = "0.3"
url = "2.5"
regex = "1.10"
encoding_rs = "0.8"
chrono = "0.4"
base64 = "0.22"
image = "0.25"
log = "0.4"
rust-embed="8.4"
once_cell = "1.19"
escaper = "0.1"
futures = "0.3"
unic-emoji-char = "0.9"

[dev-dependencies]
env_logger = "0.11"
