[package]
name = "article-extractor"
version = "1.0.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>", "Rijk van Putten <rijk@rijkvp.nl>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Extract articles from HTML."
readme = "README.md"
keywords = ["article", "scrape", "full-text", "readability"]
exclude = ["resources/tests"]

[dependencies]
thiserror = "1.0"
libxml = "0.3"
url = "2.5"
regex = "1.10"
chrono = "0.4"
log = "0.4"
rust-embed="8.4"
once_cell = "1.19"
escaper = "0.1"
unic-emoji-char = "0.9"

[dev-dependencies]
env_logger = "0.11"
