[package]
name = "article_scraper"
version = "2.0.0-alpha.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Scrap article contents from the web. Powered by fivefilters full text feed configurations."
repository = "https://gitlab.com/news-flash/article_scraper"

[dependencies]
thiserror = "1.0"
libxml = "0.3"
reqwest = { version = "0.11", features = ["json", "native-tls", "gzip", "brotli"] }
tokio = { version = "1.27", features = ["macros", "fs", "io-util"] }
url = "2.3"
regex = "1.7"
encoding_rs = "0.8"
chrono = "0.4"
base64 = "0.21"
image = "0.24"
log = "0.4"
rust-embed="6.6"
once_cell = "1.17"
escaper = "0.1"

[dev-dependencies]
env_logger = "0.10"