[package]
name = "article_scraper_cli"
version = "2.0.0-alpha.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Cli to use the article_scraper lib"
repository = "https://gitlab.com/news-flash/article_scraper"

[dependencies]
article_scraper = { path  = "../article_scraper/" }