[package]
name = "article_scraper_cli"
version = "2.1.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Cli to use the article_scraper lib"
repository = "https://gitlab.com/news-flash/article_scraper"

[dependencies]
article_scraper = { path  = "../article_scraper/" }
clap =  { version = "4.5", features = [ "derive" ] }
simplelog = "0.12"
log = "0.4"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "native-tls", "gzip", "brotli", "stream"] }
tokio = { version = "1", features = ["macros", "fs", "io-util", "rt-multi-thread" ] }
indicatif = "0.17"